<resources>
    <string name="app_name">도망쳐</string>
    <string name="id">아이디</string>
    <string name="id_chk">중복 여부</string>
    <string name="pw">비밀번호</string>
    <string name="pw_chk">비밀번호 확인</string>
    <string name="name">이름</string>
    <string name="phone">핸드폰 번호</string>
    <string name="join">회원가입</string>
    <string name="login">로그인</string>
    <string name="submit">제출</string>
    <string name="addMoim">+ 모임 등록</string>


    <!-- Map -->
    <string name="title_activity_maps">Map</string>
    <string name="cur_position">내 위치로</string>
    <string name="cur_moim">모임 위치로</string>


    <!-- success -->

    <string name="success_account_0001">등록되었습니다.</string>
    <string name="success_account_0002">생성 가능한 아이디입니다.</string>

    <string name="success_login_0001">Hello ~ </string>


    <!-- error -->

    <string name="error_account_0001">빈칸을 모두 채워주세요</string>
    <string name="error_account_0002">비밀번호를 다시 한번 확인해주세요.</string>
    <string name="error_account_0003">중복된 아이디입니다.</string>
    <string name="error_account_0004">계정 생성에 실패하였습니다.(서버오류)</string>
    <string name="error_account_0005">서버에 문제가 있습니다.</string>
    <string name="error_account_0006">아이디 중복확인을 해주세요.</string>

    <string name="error_login_0001">접속에 실패하였습니다.</string>
    <string name="error_login_0002">허가되지 않은 사용자</string>

    <string name="error_disable">미구현 ㅜㅜ</string>

    <string name="error_unknown">알 수 없는 오류</string>

</resources>
