<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorMainBlue"
    >

    <ImageView
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:src="@mipmap/moim_icon"/>

    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <EditText
            android:id="@+id/id"
            android:hint="@string/id"
            android:padding="5dp"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorWhite"
            android:singleLine="true" />
        <EditText
            android:id="@+id/pw"
            android:hint="@string/pw"
            android:padding="5dp"
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorWhite"
            android:singleLine="true" />
        <Button
            android:id="@+id/joinBtn"
            android:text="@string/join"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/selector_pressed" />
        <Button
            android:id="@+id/loginBtn"
            android:text="@string/login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/selector_pressed" />

    </LinearLayout>



</LinearLayout>
