<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorMainBlue"
    >

    <ImageView
        android:layout_marginTop="15dp"
        android:padding="1dp"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:src="@mipmap/register_icon"/>

    <LinearLayout
        android:layout_marginVertical="20dp"
        android:layout_marginHorizontal="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_weight="3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:text="@string/id"
                android:textSize="18dp"
                android:padding="5dp"
                android:layout_marginBottom="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/pw"
                android:textSize="18dp"
                android:padding="5dp"
                android:layout_marginBottom="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/pw_chk"
                android:textSize="18dp"
                android:padding="5dp"
                android:layout_marginBottom="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/name"
                android:textSize="18dp"
                android:padding="5dp"
                android:layout_marginBottom="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/phone"
                android:textSize="18dp"
                android:padding="5dp"
                android:layout_marginBottom="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


        </LinearLayout>

        <LinearLayout
            android:layout_weight="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/id"
                    android:hint="@string/id"
                    android:padding="5dp"
                    android:layout_weight="2"
                    android:layout_marginBottom="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorWhite"
                    android:singleLine="true" />
                <Button
                    android:id="@+id/checkIdBtn"
                    android:text="@string/id_chk"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="3"
                    android:layout_marginBottom="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/selector_pressed"/>


            </LinearLayout>

            <EditText
                android:id="@+id/pw"
                android:hint="@string/pw"
                android:inputType="textPassword"
                android:padding="5dp"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorWhite"
                android:singleLine="true" />
            <EditText
                android:id="@+id/pw_chk"
                android:hint="@string/pw_chk"
                android:inputType="textPassword"
                android:padding="5dp"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorWhite"
                android:singleLine="true" />
            <EditText
                android:id="@+id/name"
                android:hint="@string/name"
                android:padding="5dp"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorWhite"
                android:singleLine="true" />
            <EditText
                android:id="@+id/phone"
                android:hint="@string/phone"
                android:padding="5dp"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorWhite"
                android:singleLine="true" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/submitBtn"
        android:text="@string/submit"
        android:textColor="@color/colorTextBlue"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/selector_pressed" />

</LinearLayout>
